# libarchive

./: .bazelrc  .gitignore  BUILD.bazel
libarchive/: BUILD.bazel  archive_private.h  archive_read_support_filter_bzip2.c  archive_read_support_format_7zip.c  archive_read_support_format_xar.c  archive_read_support_format_zip.c  archive_util.c  archive_version_details.c  archive_write_add_filter_bzip2.c  archive_write_set_format_7zip.c  archive_write_set_format_xar.c  config.h
libarchive_fe/: err.h
tar/: bsdtar.c  bsdtar_platform.h
